[package]
name = "anon"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.86"
elliptic-curve = "0.13.8"
# once_cell = "1.19.0"
digest = "0.10.7"
bincode = "1.3.3"
serde = { version = "1.0.203", features = [ "derive" ] }

[dev-dependencies]
k256 = { version = "0.13.3", features = [ "serde" ] }
criterion = { version = "0.5.1", features = [ "html_reports", "async_tokio" ] }
futures = "0.3.30"
tokio = { version ="1.38.0", features = [ "rt", "rt-multi-thread", "net", "macros" ] }
tokio-util = { version ="0.7.11", features = [ "codec" ] }

[[bench]]
name = "bench_incognito"
harness = false

[[bench]]
name = "bench_wallet"
harness = false

[[bench]]
name = "bench_retail"
harness = false

[[bench]]
name = "bench_settlement"
harness = false

[[bench]]
name = "bench_dualring"
harness = false
